# api/docs/swagger.json
@@ -2,7 +2,7 @@
     "swagger": "2.0",
     "info": {
         "description": "This is a sample server celler server.",
-        "title": "STAR FLOW PRO BACKEND",
+        "title": "FLOWER SHOP API",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
             "name": "API Support",
@@ -24,7 +24,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "This api CREATE AN USER",
+                "description": "THIS API CREATE AN USER",
                 "consumes": [
                     "application/json"
                 ],
@@ -150,20 +150,14 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Search BY FULL NAME",
-                        "name": "search_by_full_name",
+                        "description": "Search BY NAME",
+                        "name": "search_by_name",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "description": "Search BY USERNAME",
-                        "name": "search_by_username",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Search BY ID",
-                        "name": "search_by_id",
+                        "description": "Search BY EMAIL",
+                        "name": "search_by_email",
                         "in": "query"
                     },
                     {
@@ -184,12 +178,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.GetAllUsersResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/models.Response"
                         }
                     },
                     "404": {
@@ -252,7 +240,7 @@
             "type": "object",
             "properties": {
                 "created_at": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "email": {
                     "type": "string",
